@@ -1,6 +1,7 @@
+// Copyright (C) 1996-1998 Santa Fe Institute.
 #import "FLink.h"
 
-@interface BLink : FLink
+@interface BLink: FLink
 {
 }
 
