@@ -1,7 +1,9 @@
+// Copyright (C) 1996-1998 Santa Fe Institute.
 #import <simtools.h>
 #import <graph.h>
 
-@interface FNet: DiGraph {
+@interface FNet: DiGraph
+{
 }
 
 @end
