@@ -1,6 +1,8 @@
+// Copyright (C) 1996-1998 Santa Fe Institute.
 #import "FLink.h"
 
-@interface ILink : FLink {
+@interface ILink: FLink
+{
 }
 
 @end
