@@ -1,3 +1,4 @@
+// Copyright (C) 1996-1998 Santa Fe Institute.
 #import "ILink.h"
 
 @implementation ILink
@@ -5,7 +6,7 @@
 - createEnd
 {
   [super createEnd];
-  if(canvas) 
+  if (canvas) 
     [linkItem setColor: "PaleGreen4"];
   return self;
 }
