@@ -1,6 +1,0 @@
-
-
-Contents of this directory: 
- 
-  *  A new release of "bank" which has been updated to conform to the
-     Swarm 1.0.5 or higher (as well as the changes in GraphLib itself).
