@@ -1,3 +1,9 @@
+1998-03-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* BLink.[hm], BankBatchSwarm.[hm], BankModelSwarm.[hm],
+	BankObserverSwarm.[hm], FEntity.[hm], FLink.[hm], FNet.[hm],
+	ILink.[hm], main.m: Add copyright headers.  Minor reformatting.
+
 1998-03-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* ILink.m: Don't Include tkobjc.h.  Reformatting throughout.
